--- a/sound/soc/davinci/Kconfig
+++ b/sound/soc/davinci/Kconfig
@@ -42,6 +42,15 @@ config  SND_AM335X_SOC_EVM
 	  Say Y if you want to add support for SoC audio on
 	  AM335X EVM
 
+config  SND_IPC335X_SOC
+	tristate "SoC Audio support for IPC335X"
+	depends on SND_AM33XX_SOC
+	select SND_DAVINCI_SOC_MCASP
+	select SND_SOC_TLV320AIC3X
+	help
+	  Say Y if you want to add support for SoC audio on
+	  IPC335X
+
 choice
 	prompt "DM365 codec select"
 	depends on SND_DAVINCI_SOC_EVM
